--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -1,5 +1,7 @@
-FROM jupyter/pyspark-notebook
+FROM jupyter/pyspark-notebook:latest
 
-# Install additional machine learning libraries
+# Install data science and database libraries
 RUN pip install --upgrade pip && \
-    pip install pandas numpy scikit-learn seaborn matplotlib
+    pip install \
+        pandas numpy scikit-learn seaborn matplotlib \
+        mysql-connector-python pymongo hdfs
