--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   datanode:
     container_name: datanode
@@ -18,11 +17,39 @@ services:
     container_name: jupyter
     depends_on:
       - spark-master
+      - mysql
+      - mongodb
     image: custom-pyspark-notebook
     ports:
       - 8888:8888
     volumes:
       - ./notebooks:/home/jovyan/work
+
+  mysql:
+    container_name: mysql
+    environment:
+      MYSQL_DATABASE: republicdb
+      MYSQL_PASSWORD: Republic$01
+      MYSQL_ROOT_PASSWORD: Republic$01
+      MYSQL_USER: rpMySQL
+    image: mysql:5.7
+    ports:
+      - 3800:3306
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./sql-scripts:/scripts/mysql
+
+  mongodb:
+    container_name: mongodb
+    environment:
+      MONGO_INITDB_ROOT_PASSWORD: Republic$01
+      MONGO_INITDB_ROOT_USERNAME: rpMongod
+    image: mongo:4.4
+    ports:
+      - 27020:27017
+    volumes:
+      - mongo_data:/data/db
+      - ./mongo-scripts:/scripts/mongodb
 
   namenode:
     container_name: namenode
@@ -30,7 +57,7 @@ services:
       - CLUSTER_NAME=test
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     ports:
-      - 50070:50070
+      - 60070:50070
       - 8020:8020
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
@@ -63,3 +90,5 @@ services:
 volumes:
   hadoop_datanode: null
   hadoop_namenode: null
+  mongo_data: null
+  mysql_data: null
