--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -1,7 +1,19 @@
-FROM jupyter/pyspark-notebook:latest
+FROM jupyter/pyspark-notebook
 
-# Install data science and database libraries
-RUN pip install --upgrade pip && \
-    pip install \
-        pandas numpy scikit-learn seaborn matplotlib \
-        mysql-connector-python pymongo hdfs
+USER root
+
+# Install Python packages
+RUN pip install pymongo mysql-connector-python matplotlib seaborn
+
+# Install MongoDB CLI tools (mongosh, mongofiles)
+RUN apt-get update && \
+    apt-get install -y gnupg curl && \
+    curl -fsSL https://pgp.mongodb.com/server-6.0.asc | gpg --dearmor -o /usr/share/keyrings/mongodb-server-6.0.gpg && \
+    echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-6.0.gpg ] https://repo.mongodb.org/apt/debian buster/mongodb-org/6.0 main" | tee /etc/apt/sources.list.d/mongodb-org-6.0.list && \
+    apt-get update && \
+    apt-get install -y mongodb-org-shell mongodb-org-tools && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+USER jovyan
+
+
