--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   datanode:
     container_name: datanode
     depends_on:
-      - namenode
+    - namenode
     environment:
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+    - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    platform: linux/amd64
     volumes:
-      - hadoop_datanode:/hadoop/dfs/data
-
+    - hadoop_datanode:/hadoop/dfs/data
   jupyter:
     build:
       context: .
@@ -16,15 +16,26 @@ services:
     command: start-notebook.sh --NotebookApp.token=''
     container_name: jupyter
     depends_on:
-      - spark-master
-      - mysql
-      - mongodb
+    - spark-master
+    - mysql
+    - mongodb
     image: custom-pyspark-notebook
+    platform: linux/amd64
     ports:
-      - 8888:8888
+    - 8888:8888
     volumes:
-      - ./notebooks:/home/jovyan/work
-
+    - ./notebooks:/home/jovyan/work
+  mongodb:
+    container_name: mongodb
+    environment:
+      MONGO_INITDB_ROOT_PASSWORD: Republic$01
+      MONGO_INITDB_ROOT_USERNAME: rpMongod
+    image: mongo:6.0
+    ports:
+    - 27020:27017
+    volumes:
+    - mongo_data:/data/db
+    - ./mongo-scripts:/scripts/mongodb
   mysql:
     container_name: mysql
     environment:
@@ -34,59 +45,46 @@ services:
       MYSQL_USER: rpMySQL
     image: mysql:5.7
     ports:
-      - 3800:3306
+    - 3800:3306
     volumes:
-      - mysql_data:/var/lib/mysql
-      - ./sql-scripts:/scripts/mysql
-
-  mongodb:
-    container_name: mongodb
-    environment:
-      MONGO_INITDB_ROOT_PASSWORD: Republic$01
-      MONGO_INITDB_ROOT_USERNAME: rpMongod
-    image: mongo:6.0
-    ports:
-      - 27020:27017
-    volumes:
-      - mongo_data:/data/db
-      - ./mongo-scripts:/scripts/mongodb
-
+    - mysql_data:/var/lib/mysql
+    - ./sql-scripts:/scripts/mysql
   namenode:
     container_name: namenode
     environment:
-      - CLUSTER_NAME=test
+    - CLUSTER_NAME=test
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
+    platform: linux/amd64
     ports:
-      - 50070:50070
-      - 8020:8020
+    - 50070:50070
+    - 8020:8020
     volumes:
-      - hadoop_namenode:/hadoop/dfs/name
-
+    - hadoop_namenode:/hadoop/dfs/name
   spark-master:
     container_name: spark-master
     depends_on:
-      - namenode
-      - datanode
+    - namenode
+    - datanode
     environment:
-      - INIT_DAEMON_STEP=setup_spark
-      - SPARK_MODE=master
+    - INIT_DAEMON_STEP=setup_spark
+    - SPARK_MODE=master
     image: bde2020/spark-master:2.4.0-hadoop2.7
+    platform: linux/amd64
     ports:
-      - 7077:7077
-      - 8080:8080
+    - 7077:7077
+    - 8080:8080
     volumes:
-      - ./jobs:/opt/spark-jobs
-
+    - ./jobs:/opt/spark-jobs
   spark-worker:
     container_name: spark-worker
     depends_on:
-      - spark-master
+    - spark-master
     environment:
-      - SPARK_MASTER=spark://spark-master:7077
+    - SPARK_MASTER=spark://spark-master:7077
     image: bde2020/spark-worker:2.4.0-hadoop2.7
+    platform: linux/amd64
     ports:
-      - 8081:8081
-
+    - 8081:8081
 volumes:
   hadoop_datanode: null
   hadoop_namenode: null
