--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -2,17 +2,28 @@ FROM jupyter/pyspark-notebook
 
 USER root
 
-# Install Python packages
-RUN pip install pymongo mysql-connector-python matplotlib seaborn xlsxwriter
 
-# Install MongoDB CLI tools (mongosh, mongofiles)
+# -----------------------------------
+# Install Python packages
+# -----------------------------------
+RUN pip install \
+    pymongo \
+    mysql-connector-python \
+    matplotlib \
+    seaborn \
+    xlsxwriter
+
 RUN apt-get update && \
-    apt-get install -y gnupg curl && \
-    curl -fsSL https://pgp.mongodb.com/server-6.0.asc | gpg --dearmor -o /usr/share/keyrings/mongodb-server-6.0.gpg && \
-    echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-6.0.gpg ] https://repo.mongodb.org/apt/debian buster/mongodb-org/6.0 main" | tee /etc/apt/sources.list.d/mongodb-org-6.0.list && \
+    apt-get install -y gnupg curl ca-certificates && \
+    curl -fsSL https://pgp.mongodb.com/server-6.0.asc -o /usr/share/keyrings/mongodb-server-6.0.asc && \
+    gpg --dearmor --no-tty /usr/share/keyrings/mongodb-server-6.0.asc && \
+    mv /usr/share/keyrings/mongodb-server-6.0.asc.gpg /usr/share/keyrings/mongodb-server-6.0.gpg && \
+    echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-6.0.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/6.0 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-6.0.list && \
     apt-get update && \
     apt-get install -y mongodb-org-shell mongodb-org-tools && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
 
 USER jovyan
 
