--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - 8888:8888
     volumes:
       - ./notebooks:/home/jovyan/work
+      - ./output:/home/jovyan/output        # For export CSV/XLSX output
     working_dir: /home/jovyan/work
 
   mongodb:
