--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -36,6 +36,14 @@ RUN wget https://repo1.maven.org/maven2/org/apache/spark/spark-sql_2.12/3.4.1/sp
 RUN wget https://repo1.maven.org/maven2/org/mongodb/spark/mongo-spark-connector_2.12/10.1.1/mongo-spark-connector_2.12-10.1.1.jar -P /opt/jars && \
     cp /opt/jars/mongo-spark-connector_2.12-10.1.1.jar /usr/local/spark/jars/
 
+RUN wget https://repo1.maven.org/maven2/org/mongodb/bson/4.9.0/bson-4.9.0.jar -P /opt/jars && \
+    cp /opt/jars/bson-4.9.0.jar /usr/local/spark/jars/
+
+RUN wget https://repo1.maven.org/maven2/org/mongodb/mongodb-driver-core/4.9.0/mongodb-driver-core-4.9.0.jar -P /opt/jars && \
+    cp /opt/jars/mongodb-driver-core-4.9.0.jar /usr/local/spark/jars/
+
+RUN wget https://repo1.maven.org/maven2/org/mongodb/mongodb-driver-sync/4.9.0/mongodb-driver-sync-4.9.0.jar -P /opt/jars && \
+    cp /opt/jars/mongodb-driver-sync-4.9.0.jar /usr/local/spark/jars/
 
 RUN apt-get update && \
     apt-get install -y gnupg curl ca-certificates && \
